--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🔍 GOLD ASSAY CERTIFICATE VERIFICATION</h1>
+            <h1>🔍 INTERTEK PRECIOUS METALS ASSAY LABORATORY</h1>
             <div class="subtitle">Official Digital Verification System</div>
             <div class="status-badge" id="statusBadge">Loading...</div>
         </div>
@@ -389,7 +389,7 @@
             statusBadge.style.background = 'linear-gradient(135deg, #28a745 0%, #20c997 100%)';
             
             // Update company name and time
-            companyName.textContent = 'GLOBAL ASSAY LABORATORIES LTD.';
+            companyName.textContent = 'INTERTEK PRECIOUS METALS ASSAY LABORATORY';
             verificationTime.textContent = `Verification performed on: ${new Date().toLocaleString()}`;
             accreditationInfo.textContent = 'Accredited Laboratory • UKAS 12345 • ISO/IEC 17025 Certified';
             
@@ -497,7 +497,7 @@
                     <div class="info-grid">
                         <div class="info-item">
                             <div class="info-label">Laboratory</div>
-                            <div class="info-value">GLOBAL ASSAY LABORATORIES LTD.</div>
+                            <div class="info-value">INTERTEK PRECIOUS METALS ASSAY LABORATORY</div>
                         </div>
                         <div class="info-item">
                             <div class="info-label">Laboratory ID</div>
@@ -630,3 +630,4 @@
 </body>
 
 </html>
+
